--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   </style>
    <script src="js/jssor.slider-28.0.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+      var printdetails="";
         var jssor_1_slider;
         window.jssor_1_slider_init = function() {
 
@@ -158,7 +159,7 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#portfolio">'Gallery'</a></li>
           <li><a href="#team">Team</a></li>
           <!--<li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -513,12 +514,12 @@
          <div class="row">
             <div class="col-12 col-lg-4 col-md-12 ">
                <div class="Carroucel">
-                 <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:680px;overflow:hidden;visibility:hidden;">
+                 <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:980px;overflow:hidden;visibility:hidden;">
                   <!-- Loading Screen -->
                   <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
                       <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
                   </div>
-                  <div class="in_Carroucel" data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:580px;overflow:hidden;">
+                  <div class="in_Carroucel" data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:880px;overflow:hidden;">
                       <!--<div>
                           <img data-u="image" src="img/031.jpg" />
                           <img data-u="thumb" src="img/031-s190x90.jpg" />
@@ -543,13 +544,33 @@
             </div>
             <div class="col-12 col-lg-1 col-md-12 "></div>
           <div class="col-12 col-lg-7 col-md-12 ">
-            <div class="form-group">
-              <label for="recipient-name" class="col-form-label">Recipient:</label>
-              <input type="text" class="form-control" id="recipient-name">
+            <div >
+              <label for="item_price" class="col-form-label">Price:</label>
+              <b><p class="item_price"></p></b>
             </div>
-            <div class="form-group">
-              <label for="message-text" class="col-form-label">Message:</label>
-              <textarea class="form-control" id="message-text"></textarea>
+            <div >
+              <label for="description-name" class="col-form-label">Description:</label>
+              <div class="item_description"></div><br>
+            </div>
+            <div >
+              <label for="colors" class="col-form-label">Color:</label>
+              <select id="colors">
+                <option value="red">Red</option>
+                <option value="green">Green</option>
+                <option value="blue">Blue</option>
+                <option value="yellow">Yellow</option>
+              </select>
+            </div>
+            <div >
+              <label for="sizes" class="col-form-label">Size:</label>
+              <select id="sizes">
+                <option value="Tiny">Tiny</option>
+                <option value="Small">Small</option>
+              </select>
+            </div>
+            <div >
+              <label for="quantity" class="col-form-label">Quantity:</label>
+              <input style="width:50px;" type="number"id="quantity">
             </div>
          </div>
          </div>
@@ -557,7 +578,8 @@
       </div>
       <div class="modal-footer">
         <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-        <button type="button" class="btn btn-primary">Add to cart</button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#request" data-dismiss="modal" onClick="alert('hi');">'Buy now'</button>
+        <!--<button type="button" class="btn btn-primary">Add to cart</button>-->
       </div>
     </div>
   </div>
@@ -582,17 +604,19 @@
       <script src="lib/lightbox/js/lightbox.min.js"></script>
 
       <script type="text/javascript">
+        var colorindex;
+        var colors=["White","Black","Red","Green","Yellow","Violet","Grey","Brass","Golden","Glow Green"];
       var header ="<div class='container'>"+
           "<header class='section-header'>"+
           "<h3 class='section-title'>Our Gallery</h3>"+
           "<p>Actualy it is the prints that we have printed<br>"+
-          "Hover the gif to see the real image, source file, actual source (if not original) or a better view"+
+          "Hover the gif to see the real image, source file, actual source (if not original) or a better view (plus if you follow our Services it is free, the prices are more... more or less how much it costs us to make)"+
           "</p>"+
         "</header>"+
         "<div class='row'>"+
         "<div class='col-lg-12'>"+
         " <ul id='portfolio-flters'>";
-
+      var selectedid=0;
       var filters = [{data_filter:"*",value:"All"},
                         {data_filter:".filter-dnd",value:"D&D"},
                         {data_filter:".filter-games",value:"Games"},
@@ -619,9 +643,9 @@
           title: "The Death Knight",
           description: "In a D&D session our main mission was to find and kill the death knight... he is not an easy task!",
           previewimg: "img/gifs/28n.gif",
-          hoverimg: ["img/gifs/28n.gif"],
-          popupimg: ["img/gifs/28n.gif"],
-          download: "",
+          hoverimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
+          popupimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
+          download: "stlviewer/body.stl",
           source: "https://www.youmagine.com/designs/dark-knight",
           sizes: ["Tiny", "Small", "Medium"],
           def: 0,
@@ -982,31 +1006,55 @@
             full_prof_text+="<a target='_blank'  href='"+arrprints[i].source+"' class='link-details' title='Source Url'><i class='ion ion-android-open'></i></a>";
          }
          if(arrprints[i].download!=""){
-            full_prof_text+="<a href='"+arrprints[i].download+"' class='link-details' title='Source Url'><i class='ion ion-android-arrow-down'></i></a>";
+            full_prof_text+="<a href='"+arrprints[i].download+"' class='link-details' title='Download file'><i class='ion ion-android-arrow-down'></i></a>";
          }
          full_prof_text+="<p style='font-size: 14px;font-weight: bold;'>"+arrprints[i].prices[arrprints[i].def].toFixed(2)+"$</p></div></div></div></div>";
       }
+
       full_prof_text+="</div>";
       $("#portfolio").append("<div class='container'>"+full_prof_text+"</div>");
 
 
       $('#exampleModal').on('show.bs.modal', function (event) {
         var button = $(event.relatedTarget) // Button that triggered the modal
-        var recipient = button.data('whatever') // Extract info from data-* attributes
+        var ind = button.data('whatever') // Extract info from data-* attributes
         // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
         // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
         var modal = $(this)
-        modal.find('.modal-title').text(arrprints[recipient].title)
-        modal.find('.modal-body input').val(recipient)
+        modal.find('.modal-title').text(arrprints[ind].title)
+        modal.find('.modal-body input').val(ind)
+        modal.find('.item_description').text(arrprints[ind].description)
+        modal.find('.item_price').text(arrprints[ind].prices[arrprints[ind].def].toFixed(2)+"$")
+        selectedid=ind;
+        var everysize="";
+        for (var i = 0; i < arrprints[ind].sizes.length; i++) {
+          if(i==arrprints[ind].def){
+            everysize+="<option value='"+arrprints[ind].sizes[i]+"'>"+arrprints[ind].sizes[i]+"</option>";
+          }else{
+            everysize+="<option value='"+arrprints[ind].sizes[i]+"'>"+arrprints[ind].sizes[i]+"</option>";
+          }
+        }
+        modal.find('#sizes').html(everysize);
+
+        
         var everyimage="";
 
-        for (var i = 0; i < arrprints[recipient].popupimg.length; i++) {
-            everyimage+="<div><img data-u='image' src='"+arrprints[recipient].popupimg[i]+"' /><img data-u='thumb' src='"+arrprints[recipient].hoverimg[i]+"' /></div>";
+        for (var i = 0; i < arrprints[ind].popupimg.length; i++) {
+            everyimage+="<div><img data-u='image' src='"+arrprints[ind].popupimg[i]+"' /><img data-u='thumb' src='"+arrprints[ind].hoverimg[i]+"' /></div>";
         }
         jssor_1_slider.$ReloadSlides(everyimage);
-
+        var printdetails="Print title:"+arrprints[ind].title+"&#13;&#10;"+
+                          "Print size:"+arrprints[ind].sizes[arrprints[ind].def]+"&#13;&#10;"+
+                          "Print color:"+arrprints[ind].title+"&#13;&#10;"+
+                          "Print title:"+arrprints[ind].title+"&#13;&#10;"+
+                          "Print title:"+arrprints[ind].title+"&#13;&#10;"+
+                          "Print title:"+arrprints[ind].title+"&#13;&#10;";
 
       })
+
+      $("#sizes").change(function() {
+        $('#exampleModal').find('.item_price').text(arrprints[selectedid].prices[$(this)[0].selectedIndex].toFixed(2)+"$");
+      });
       </script>
       <script src="js/include.js"></script>
       <!-- Contact Form JavaScript File -->
