--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
               123 fake street <br>
               lisbon, <br>
               Portugal <br>
+              <div style="font-size: 8px;">(Next to the river of unknown knowledge)</div><br>
               <strong>Phone:</strong> +351 *********<br>
               <strong>Email:</strong> webangelasilva96@gmail.com<br>
             </p>
@@ -604,7 +605,7 @@
       <script src="lib/lightbox/js/lightbox.min.js"></script>
 
       <script type="text/javascript">
-        var colorindex;
+        var colorindex=0;
         var colors=["White","Black","Red","Green","Yellow","Violet","Grey","Brass","Golden","Glow Green"];
       var header ="<div class='container'>"+
           "<header class='section-header'>"+
