--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               123 fake street <br>
               lisbon, <br>
               Portugal <br>
-              <div style="font-size: 8px;">(Next to the river of unknown knowledge)</div><br>
+              <b style="font-size: 8px;">(Next to the river of unknown knowledge)</b><br>
               <strong>Phone:</strong> +351 *********<br>
               <strong>Email:</strong> webangelasilva96@gmail.com<br>
             </p>
