--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
           <div class="col-lg-4 col-md-6 footer-info">
             <h3>20Fedora</h3>
-            <p>Why is this text place over is here? Ba. Ha ba ba. Ha ba ba da ga da ga. Ha ba ba da da ba. Ha da ba da ga da ga. Ha da da. Ba ba ba ba. Hawwww. Ha wa wa waa. Haw...</p>
+            <p>Is a 3d printing "company" or "mascot" that was created by a humongous team of 2 creatures in 2019 with the a simple goal of being able in a far future to print houses! (Don't get your hopes up just yet)</p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
@@ -385,7 +385,7 @@
 
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Hey! Did you know that sometimes improve something so big we love to share that something to everyone?! Me neither but here is the newsletter. Hopefully we will send once a month.</p>
+            <p>Hey! Did you know that sometimes an improvement is made on something so big that we would love to share that something to everyone?! Me neither but here is the newsletter. Hopefully we will send once a month.</p>
 			<form class="gform pure-form pure-form-stacked" method="POST" data-email="newsletter@20fedora.pt"
 					action="https://script.google.com/macros/s/AKfycbwbvHDUyONzAgpTrSJ2FzmcHj_JsZ-9fz2-xA7UCoRpmuLMkM0/exec">
               <input type="email" name="email"><input type="submit"  value="Subscribe">
