--- a/index.html
+++ b/index.html
@@ -641,12 +641,38 @@
       var arrprints = [{
           filter: "filter-dnd",
           subfiler: "D&D",
+          title: "Super Shades",
+          description: "Siiiiiiiiiiiiiick",
+          previewimg: "img/gifs/28n.gif",
+          hoverimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
+          popupimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
+          download: "downloads/supershadesv2.stl",
+          source: "https://www.prusaprinters.org/prints/25075-super-sunshades",
+          sizes: ["Tiny", "Small", "Medium"],
+          def: 0,
+          prices: [0.31, 0.95, 2.08]
+      },{
+          filter: "filter-dnd",
+          subfiler: "D&D",
+          title: "Necromant Cleric",
+          description: "The big pandamic is here, what better way to... im sorry",
+          previewimg: "img/gifs/28n.gif",
+          hoverimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
+          popupimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
+          download: "downloads/Necromant_Cleric.stl",
+          source: "https://www.thingiverse.com/thing:3133932",
+          sizes: ["Tiny", "Small", "Medium"],
+          def: 0,
+          prices: [0.31, 0.95, 2.08]
+      },{
+          filter: "filter-dnd",
+          subfiler: "D&D",
           title: "The Death Knight",
           description: "In a D&D session our main mission was to find and kill the death knight... he is not an easy task!",
           previewimg: "img/gifs/28n.gif",
           hoverimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
           popupimg: ["img/gifs/27n.gif","img/gifs/28n.gif"],
-          download: "stlviewer/body.stl",
+          download: "downloads/dark-knight.zip",
           source: "https://www.youmagine.com/designs/dark-knight",
           sizes: ["Tiny", "Small", "Medium"],
           def: 0,
@@ -659,7 +685,7 @@
           previewimg: "img/gifs/27n.gif",
           hoverimg: ["img/gifs/27n.gif"],
           popupimg: ["img/gifs/27n.gif"],
-          download: "",
+          download: "downloads/Yeenoghu.zip",
           source: "https://www.thingiverse.com/thing:1559735",
           sizes: ["Medium"],
           def: 0,
@@ -672,7 +698,7 @@
           previewimg: "img/gifs/25n.gif",
           hoverimg: ["img/gifs/25n.gif"],
           popupimg: ["img/gifs/25n.gif"],
-          download: "",
+          download: "downloads/Meeseeks_Box.zip",
           source: "https://www.thingiverse.com/thing:2573620",
           sizes: ["Small", "Medium", "Big"],
           def: 1,
@@ -685,7 +711,7 @@
           previewimg: "img/gifs/24n.gif",
           hoverimg: ["img/gifs/24n.gif"],
           popupimg: ["img/gifs/24n.gif"],
-          download: "",
+          download: "downloads/Black_Goku.zip",
           source: "https://www.thingiverse.com/thing:2030296",
           sizes: [ "Big", "Large"],
           def: 0,
@@ -698,8 +724,8 @@
           previewimg: "img/gifs/19n.gif",
           hoverimg: ["img/gifs/19n.gif"],
           popupimg: ["img/gifs/19n.gif"],
-          download: "",
-          source: "",
+          download: "downloads/Necromancer_rb.stl",
+          source: "https://www.thingiverse.com/thing:3945837",
           sizes: ["Tiny", "Small"],
           def: 0,
           prices: [0.30, 0.90]
@@ -711,8 +737,8 @@
           previewimg: "img/gifs/20n.gif",
           hoverimg: ["img/gifs/20n.gif"],
           popupimg: ["img/gifs/20n.gif"],
-          download: "",
-          source: "",
+          download: "downloads/Skeleton_sword1_rb.stl",
+          source: "https://www.thingiverse.com/thing:3938876",
           sizes: ["Tiny", "Small"],
           def: 0,
           prices: [0.30, 0.90]
@@ -724,8 +750,8 @@
           previewimg: "img/gifs/21n.gif",
           hoverimg: ["img/gifs/21n.gif"],
           popupimg: ["img/gifs/21n.gif"],
-          download: "",
-          source: "",
+          download: "downloads/Skeleton_halberd_MK2_rb.stl",
+          source: "https://www.thingiverse.com/thing:3938876",
           sizes: ["Tiny", "Small"],
           def: 0,
           prices: [0.30, 0.90]
@@ -737,8 +763,8 @@
           previewimg: "img/gifs/22n.gif",
           hoverimg: ["img/gifs/22n.gif"],
           popupimg: ["img/gifs/22n.gif"],
-          download: "",
-          source: "",
+          download: "downloads/Skeleton_axe_rb.stl",
+          source: "https://www.thingiverse.com/thing:3938876",
           sizes: ["Tiny", "Small"],
           def: 0,
           prices: [0.30, 0.90]
@@ -750,8 +776,8 @@
           previewimg: "img/gifs/23n.gif",
           hoverimg: ["img/gifs/23n.gif"],
           popupimg: ["img/gifs/23n.gif"],
-          download: "",
-          source: "",
+          download: "downloads/_archer_roundbase.stl",
+          source: "https://www.thingiverse.com/thing:3793607",
           sizes: ["Tiny", "Small"],
           def: 0,
           prices: [0.30, 0.90]
@@ -763,7 +789,7 @@
           previewimg: "img/gifs/18n.gif",
           hoverimg: ["img/gifs/18n.gif"],
           popupimg: ["img/gifs/18n.gif"],
-          download: "",
+          download: "downloads/xmas_tree_idig3d.stl",
           source: "https://www.thingiverse.com/thing:1913982",
           sizes: ["Small", "Medium", "Big", "Large"],
           def: 1,
@@ -776,7 +802,7 @@
           previewimg: "img/gifs/1n.gif",
           hoverimg: ["img/gifs/1n.gif"],
           popupimg: ["img/gifs/1n.gif"],
-          download: "",
+          download: "downloads/Brass+Dragon.zip",
           source: "https://www.thingiverse.com/thing:2831227",
           sizes: ["Small", "Medium", "Big", "Large"],
           def: 2,
@@ -789,7 +815,7 @@
           previewimg: "img/gifs/2n.gif",
           hoverimg: ["img/gifs/2n.gif"],
           popupimg: ["img/gifs/2n.gif"],
-          download: "",
+          download: "downloads/LowPoly_Darth_Vader_Pen_Holder.zip",
           source: "https://www.thingiverse.com/thing:2449436",
           sizes: [ "Big", "Large"],
           def: 0,
@@ -802,7 +828,7 @@
           previewimg: "img/gifs/17n.gif",
           hoverimg: ["img/gifs/17n.gif"],
           popupimg: ["img/gifs/17n.gif"],
-          download: "",
+          download: "downloads/Dagger_of_Venom.zip",
           source: "http://thingiverse.com/thing:3615139",
           sizes: ["Tiny","Small", "Medium", "Big", "Large","HUMONGOUS"],
           def: 4,
@@ -815,7 +841,7 @@
           previewimg: "img/gifs/16n.gif",
           hoverimg: ["img/gifs/16n.gif"],
           popupimg: ["img/gifs/16n.gif"],
-          download: "",
+          download: "downloads/spider.zip",
           source: "http://thingiverse.com/thing:3129886",
           sizes: ["Big"],
           def: 0,
@@ -828,7 +854,7 @@
           previewimg: "img/gifs/15n.gif",
           hoverimg: ["img/gifs/15n.gif"],
           popupimg: ["img/gifs/15n.gif"],
-          download: "",
+          download: "downloads/Spyro_-_Controller_Stand.zip",
           source: "http://thingiverse.com/thing:3765997",
           sizes: ["Big", "Large"],
           def: 0,
@@ -841,8 +867,8 @@
           previewimg: "img/gifs/14n.gif",
           hoverimg: ["img/gifs/14n.gif"],
           popupimg: ["img/gifs/14n.gif"],
-          download: "",
-          source: "http://thingiverse.com/make:698576",
+          download: "downloads/FDM_Friendly__Steinsgate__Upa.zip",
+          source: "https://www.thingiverse.com/thing:2806149",
           sizes: ["Small", "Medium", "Big", "Large"],
           def: 1,
           prices: [0.50, 1, 3, 5]
@@ -854,7 +880,7 @@
           previewimg: "img/gifs/13n.gif",
           hoverimg: ["img/gifs/13n.gif"],
           popupimg: ["img/gifs/13n.gif"],
-          download: "",
+          download: "downloads/Owl.zip",
           source: "http://thingiverse.com/thing:1005481",
           sizes: ["Small", "Medium", "Big", "Large"],
           def: 0,
@@ -1007,7 +1033,7 @@
             full_prof_text+="<a target='_blank'  href='"+arrprints[i].source+"' class='link-details' title='Source Url'><i class='ion ion-android-open'></i></a>";
          }
          if(arrprints[i].download!=""){
-            full_prof_text+="<a href='"+arrprints[i].download+"' class='link-details' title='Download file'><i class='ion ion-android-arrow-down'></i></a>";
+            full_prof_text+="<a href='"+arrprints[i].download+"' class='link-details' title='Download files'><i class='ion ion-android-arrow-down'></i></a>";
          }
          full_prof_text+="<p style='font-size: 14px;font-weight: bold;'>"+arrprints[i].prices[arrprints[i].def].toFixed(2)+"$</p></div></div></div></div>";
       }
